# zaringold

./: --full-page  --mobile  .dockerignore  .env  .gitignore  Dockerfile  README.md  SCALE.md  alanchand-api-doc.json  auto-restart-dev.sh  auto-restart.sh  auto-start.sh  cached-homepage.html  custom-server-prod.js  custom-server.js  dev-daemon.js  dev-start.sh  dev-watchdog.sh  docker-compose.yml  eslint.config.mjs  gold-prices-today.json  gold-search.json  jamaran-data.json  keep-alive.js  keep-alive.sh  keep-dev-alive.sh  keepalive-dev.sh  keepalive-next.sh  keepalive-prod.sh  keepalive-server.js  keepalive.sh  light-server.js  manage.py  next-watchdog.sh  next.config.ts  package-lock.json  package.json  rade-data.json  requirements.txt  restart-watch.sh  (+30 more)
admin_panel/: models.py  serializers.py  urls.py  views.py
agent-ctx/: 1-payment-gateway-api-routes.md  12-d-security-dashboard.md  13-b-frontend-styling.md  14-a-main-agent.md  14-c-fullstack-dev.md  14b-main-agent.md  15-c-fullstack-dev.md  15b-fullstack-dev.md  16-e-fullstack-developer.md  18-c-fullstack-dev.md  2-a-schema-api-agent.md  2-b-fullstack-dev.md  2-d-education-center.md  2-kyc-wizard-rewrite.md  20-chat-system-rewrite.md  22-fullstack-sms-panel.md  24-wallet-system-api.md  25-qr-payment-system.md  26-subscription-billing.md  3-a-backend-api-agent.md  3-a-full-stack-developer.md  3-a-gateway-api-routes.md  3-b-full-stack-developer.md  3-full-stack-developer.md  3b-css-styling-expert.md  4-5-6-shared-components.md  4-R19-Main-Agent.md  4-a-backend-api-agent.md  4-full-stack-developer.md  4-kyc-api-route.md  (+9 more)
public/sdk/zarrin-gold-python-sdk/: README.md  pyproject.toml  setup.py
public/sdk/zarrin-gold-python-sdk/zarringold/: exceptions.py  models.py
(+1066 files in other folders)
